syntax = "proto3";

option csharp_namespace = "DLS.ServiceLecture.Protos";

package lecture;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service LectureProto {
    rpc GetAllLectures (google.protobuf.Empty) returns (AllLecturesReply);
    rpc GetLectureById (google.protobuf.Int64Value) returns (LectureObj);
    rpc AddLecture (LectureObj) returns (LectureObj);
    rpc GenerateCodeForLecture(google.protobuf.Int64Value) returns (LectureObj);
    rpc RegisterToLecture(LectureCode) returns (LectureCode);
    rpc GetLecturesByCourse(google.protobuf.Int64Value) returns (AllLecturesReply);
}

message AllLecturesReply {
    repeated LectureObj lectures = 1;
}

message LectureObj {
  int64 id = 1;
  string name = 2;
  google.protobuf.Timestamp date = 3;
  int64 courseId = 4;
  string registrationCode = 5;
  int64 teacherId = 6;
  repeated int64 studentIds = 7;
}

message LectureCode {
  string registrationCode = 1;
  string response = 2;
  string studentEmail = 3;
  }